force-app/main/default/objects/Environment_Variable__c/Environment_Variable__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Environment Variables</label>
</CustomObject>