force-app/main/default/objects/Environment_Variable__c/fields/Admin_Profile_IDs__c.field-meta.xml
<CustomField>
    <fullName>Admin_Profile_IDs__c</fullName>
    <description>Case 4974 - This variable was added to contain the 18-digit IDs that are used to check if the User has the correct profile to be allowed to edit/save bank contacts</description>
    <inlineHelpText>Ensure that the 18-digit IDs are used</inlineHelpText>
    <label>Admin Profile IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>