force-app/main/default/objects/Environment_Variable__c/fields/Bank_Contact_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Account_Id__c</fullName>
    <description>SHAVEEN10DEC2010CASE599 &gt; This is used to link all the Bank Contacts to 1 Standard Bank Account. This value changes in the DEV orgs and will need to be created and updated accordingly.</description>
    <label>Bank Contact Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>