force-app/main/default/objects/Environment_Variable__c/fields/Bank_Contact_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Record_Id__c</fullName>
    <description>NIEHAUSR10DEC2010CASE599 &gt; Used in User_BankContact_Sync_Future for retrieving the Bank Contact Record Type Id</description>
    <label>Bank Contact Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>