force-app/main/default/objects/Environment_Variable__c/fields/BatchErrorEmails__c.field-meta.xml
<CustomField>
    <fullName>BatchErrorEmails__c</fullName>
    <description>Variable to store an email address to be used to send the email after Batch execution</description>
    <label>BatchErrorEmails</label>
    <length>250</length>
    <type>Text</type>
</CustomField>