force-app/main/default/objects/Environment_Variable__c/fields/BRDLiteTemplateID__c.field-meta.xml
<CustomField>
    <fullName>BRDLiteTemplateID__c</fullName>
    <description>The salesforce record ID of the BRD Lite template stored in the CRM Team Folder</description>
    <label>BRDLiteTemplateID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>