force-app/main/default/objects/Environment_Variable__c/fields/BRDTemplateID__c.field-meta.xml
<CustomField>
    <fullName>BRDTemplateID__c</fullName>
    <description>The salesforce record ID of the BRD template stored in the CRM Team Folder</description>
    <label>BRDTemplateID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>