force-app/main/default/objects/Environment_Variable__c/fields/CCRejectionPBBUserID__c.field-meta.xml
<CustomField>
    <fullName>CCRejectionPBBUserID__c</fullName>
    <label>CCRejectionPBBUserID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>