force-app/main/default/objects/Environment_Variable__c/fields/CCRejectionProfileID__c.field-meta.xml
<CustomField>
    <fullName>CCRejectionProfileID__c</fullName>
    <label>CCRejectionProfileID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>