force-app/main/default/objects/Environment_Variable__c/fields/ChangeRequestChecklistID__c.field-meta.xml
<CustomField>
    <fullName>ChangeRequestChecklistID__c</fullName>
    <description>The id of the Change Request Checklist stored in the CRM Folder</description>
    <label>ChangeRequestChecklistID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>