force-app/main/default/objects/Environment_Variable__c/fields/ConfirmationEmailHandlerAddress__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationEmailHandlerAddress__c</fullName>
    <label>ConfirmationEmailHandlerAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>