force-app/main/default/objects/Environment_Variable__c/fields/CRM_Production_Support__c.field-meta.xml
<CustomField>
    <fullName>CRM_Production_Support__c</fullName>
    <description>Email Address for CRM Production Support in the case of an Apex exception. You can use this custom setting when sending an email alert.</description>
    <label>CRM Production Support</label>
    <type>Email</type>
</CustomField>