force-app/main/default/objects/Environment_Variable__c/fields/Deactivate_Client_Delete_Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Client_Delete_Email_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate Client Delete Email Alert</label>
    <type>Checkbox</type>
</CustomField>