force-app/main/default/objects/Environment_Variable__c/fields/Draw_Down_Grand_Parent_Products__c.field-meta.xml
<CustomField>
    <fullName>Draw_Down_Grand_Parent_Products__c</fullName>
    <description>Case#141 - Rudolf Niehaus. 
Draw down profiles records and rules are only applicable for Grand Parent Product (GPP) pick list values in this field. Semi-colon separate multiple GPP pick list values.</description>
    <inlineHelpText>Use a semi-colon to separate multiple Grand Parent Products.</inlineHelpText>
    <label>Draw Down Grand Parent Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>