force-app/main/default/objects/Environment_Variable__c/fields/Draw_Down_Product_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Draw_Down_Product_Record_Types__c</fullName>
    <description>Case#141 - Rudolf Niehaus.
Draw down profiles records and rules are only applicable for product record types in this field. Comma separate multiple record type names. The name and NOT the API name is used to make it easier for non developers to update the values.</description>
    <inlineHelpText>Use a semi-colon to separate multiple product record types.</inlineHelpText>
    <label>Draw Down Product Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>