force-app/main/default/objects/Environment_Variable__c/fields/FDTemplateID__c.field-meta.xml
<CustomField>
    <fullName>FDTemplateID__c</fullName>
    <description>The salesforce record ID of the Functional Design template stored in the CRM Team Folder</description>
    <label>FDTemplateID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>