force-app/main/default/objects/Environment_Variable__c/fields/FXTraderSiteURL__c.field-meta.xml
<CustomField>
    <fullName>FXTraderSiteURL__c</fullName>
    <label>FXTraderSiteURL</label>
    <type>Url</type>
</CustomField>