force-app/main/default/objects/Environment_Variable__c/fields/Gain_Partner_Services_email_address__c.field-meta.xml
<CustomField>
    <fullName>Gain_Partner_Services_email_address__c</fullName>
    <description>This address is used for communicating instructions to Gain Partner Services. It is used when an instruction to block or unblock a trading account is issued to Gain from Standard Bank.</description>
    <label>Gain Partner Services email address</label>
    <type>Email</type>
</CustomField>