force-app/main/default/objects/Environment_Variable__c/fields/GainMarginChangeEMailAddress__c.field-meta.xml
<CustomField>
    <fullName>GainMarginChangeEMailAddress__c</fullName>
    <description>Email Address for Gain Capital</description>
    <label>GainMarginChangeEMailAddress</label>
    <type>Email</type>
</CustomField>