force-app/main/default/objects/Environment_Variable__c/fields/Ignore_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Regression: Case#548 - Replaced user object field with custom setting field. This setting is used as part of the condition in validation rules to ignore the rule.</description>
    <inlineHelpText>Set to True if validation rules must be ignored</inlineHelpText>
    <label>Ignore Validation Rule</label>
    <type>Checkbox</type>
</CustomField>