force-app/main/default/objects/Environment_Variable__c/fields/London_3rd_Line_Support__c.field-meta.xml
<CustomField>
    <fullName>London_3rd_Line_Support__c</fullName>
    <label>London 3rd Line Support</label>
    <type>Email</type>
</CustomField>