force-app/main/default/objects/Environment_Variable__c/fields/MarketingWebServerURL__c.field-meta.xml
<CustomField>
    <fullName>MarketingWebServerURL__c</fullName>
    <label>MarketingWebServerURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>