force-app/main/default/objects/Environment_Variable__c/fields/MoreDocsEmailTemplateId__c.field-meta.xml
<CustomField>
    <fullName>MoreDocsEmailTemplateId__c</fullName>
    <label>MoreDocsEmailTemplateId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>