force-app/main/default/objects/Environment_Variable__c/fields/onErrorAddress__c.field-meta.xml
<CustomField>
    <fullName>onErrorAddress__c</fullName>
    <label>onErrorAddress</label>
    <length>50</length>
    <type>Text</type>
</CustomField>