force-app/main/default/objects/Environment_Variable__c/fields/Salesforce_Administration_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Administration_Id__c</fullName>
    <label>Salesforce Administration Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>