force-app/main/default/objects/Environment_Variable__c/fields/serverURL__c.field-meta.xml
<CustomField>
    <fullName>serverURL__c</fullName>
    <label>serverURL</label>
    <type>Url</type>
</CustomField>