force-app/main/default/objects/Environment_Variable__c/fields/Skip_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Skip_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to skip the workflow firing during the data cleanup and migration activities.</description>
    <label>Skip Workflow</label>
    <type>Checkbox</type>
</CustomField>