force-app/main/default/objects/Environment_Variable__c/fields/TDLiteTemplateID__c.field-meta.xml
<CustomField>
    <fullName>TDLiteTemplateID__c</fullName>
    <description>The salesforce id of the technical design lite document in the CRM Team Folder</description>
    <label>TDLiteTemplateID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>