force-app/main/default/objects/Environment_Variable__c/fields/TDTemplateID__c.field-meta.xml
<CustomField>
    <fullName>TDTemplateID__c</fullName>
    <description>The salesforce record ID of the Technical Design template stored in the CRM Team Folder</description>
    <label>TDTemplateID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>