force-app/main/default/objects/Environment_Variable__c/fields/urlTrainingSnippets__c.field-meta.xml
<CustomField>
    <fullName>urlTrainingSnippets__c</fullName>
    <description>This url has the exact location of the training snippets.</description>
    <inlineHelpText>This url has the exact location of the training snippets.</inlineHelpText>
    <label>urlTrainingSnippets</label>
    <type>Url</type>
</CustomField>